--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 			<header class="sidebar-settings-header">
 				<a data-id="back-button"><img src="./files/back.png" alt="" /></a>
 			</header>
-			<main class="sidebar-settings-main">
-				<button>
+			<main class="sidebar-settings-main" >
+				<button data-destination="#schedule">
 					<img src="./files/cart.png" alt="" /> <span> Order schedule</span>
 				</button>
 				<button>
@@ -206,7 +206,7 @@
 			</header>
 
 			<main class="cart-main-items">
-				<div>
+				<!-- <div>
 					<div class="cart-item">
 						<div class="cart-item-image">
 							<img
@@ -224,15 +224,15 @@
 						<p class="cart-item-total-price">Price</p>
 						<span> yo2 </span>
 					</div>
-					<div><img src="./files/delete.png" alt="" /></div>
-				</div>
+					<button><img src="./files/delete.png" alt="" /></button>
+				</div> -->
 			</main>
 			<footer class="cart-footer">
-				<p class="cart-total-price">Total Price <span> yo2 </span></p>
+				<p class="cart-total-price">Total Price</p>
 				<button class="cart-checkout">Confirm</button>
 			</footer>
 		</section>
-		<section class="schedule hide">
+		<section class="schedule hide" id="schedule">
 			<header class="schedule-header">
 				<a data-id="back-button"><img src="./files/back.png" alt="" /></a>
 				<span>Make a schedule</span>
@@ -260,12 +260,14 @@
 					<label class="date-label" for="final-date">Final Date</label>
 					<input class="date-input" type="date" id="final-date" />
 				</div>
-				<button class="make-schedule" type="submit">Proceed</button>
+				<button data-destination="#meal-fed" class="make-schedule" type="submit">Proceed</button>
 			</form>
 		</section>
 		<section id="profile" class="profile hide">
 			<header class="profile-header">
-				<a data-id="back-button"><img src="./files/back.png" alt="" /></a>
+				<a data-function="profile-back-button"
+					><img src="./files/back.png" alt=""
+				/></a>
 				<span>Profile</span>
 			</header>
 			<form class="profile-main edit">
@@ -279,33 +281,38 @@
 					<div>
 						<p>
 							Email:
-							<input type="email" value="dfjfnu" derth />
+							<input disabled type="email" value="dfjfnu" derth />
 						</p>
-						<p>Phone number: <input type="text" value="874637" derth /></p>
+						<p>
+							Phone number: <input disabled type="text" value="874637" derth />
+						</p>
 					</div>
 				</section>
 				<section>
 					<p>Address</p>
 					<div>
 						<p>
-							Contact address <input type="text" value="Agbowo Ibadan" derth />
+							Contact address
+							<input disabled type="text" value="Agbowo Ibadan" derth />
 						</p>
 					</div>
 				</section>
-				<section>
+				<section class="profile-password hide">
 					<p>Password</p>
 					<div>
 						<p>
-							Current Password: <input type="password" value="nbhdgchv" derth />
+							Current Password:
+							<input disabled type="password" value="nbhdgchv" derth />
 						</p>
 						<p>
-							Confirm Password: <input type="password" value="nbhdgchv" derth />
+							Confirm Password:
+							<input disabled type="password" value="nbhdgchv" derth />
 						</p>
 					</div>
 				</section>
 			</form>
 			<button type="submit" class="profile-button">Edit detail</button>
-			<section class="unchanged-profile">
+			<section class="unchanged-profile hide">
 				<div>
 					<p>Leave without making changes?</p>
 					<div class="buttons">
@@ -315,7 +322,7 @@
 				</div>
 			</section>
 		</section>
-		<section class="meal-fed hide">
+		<section class="meal-fed hide" id="meal-fed">
 			<header class="meal-fed-header">
 				<a data-id="back-button"><img src="./files/back.png" alt="" /></a
 				><span>Meal for each day</span>
@@ -328,7 +335,7 @@
 				</form>
 				<p>Fennel</p>
 			</section>
-			<button type="submit">Continue</button>
+			<button type="submit" data-destination="#homepage">Continue</button>
 		</section>
 		<section class="login hide" id="login">
 			<form action="">
